crates/vize_canon/src/batch/virtual_project/snapshots/vize_canon__batch__virtual_project__tests__reexported_vue_interface_props_virtual_ts.snap
---
source: crates/vize_canon/src/batch/virtual_project/tests.rs
expression: snapshot_text(virtual_parent.content.as_str())
---
/// <reference lib="es2022" />
/// <reference lib="dom" />
/// <reference lib="dom.iterable" />
// ============================================
// Virtual TypeScript for Vue SFC Type Checking
// Generated by vize
// ============================================

// Shared preamble hoisted to the program-wide __vize_helpers.d.ts
// ========== Module Scope (imports) ==========

import type { BaseProps } from "./index";

export interface ParentWidgetProps extends BaseProps {}

import Child from "./Child.vue.ts";

// ========== Exported Types ==========
export type Props = ParentWidgetProps;

// ========== Setup Scope ==========
function __setup() {
  // Compiler macros (setup-scope only; signatures hoisted to the shared helpers file)
  const defineProps = __vize_defineProps;
  const defineEmits = __vize_defineEmits;
  const defineExpose = __vize_defineExpose;
  const defineModel = __vize_defineModel;
  const defineSlots = __vize_defineSlots;
  const withDefaults = __vize_withDefaults;
  const useTemplateRef = __vize_useTemplateRef;
  // Mark compiler macros as used
  void defineProps; void defineEmits; void defineExpose; void defineModel; void defineSlots; void withDefaults; void useTemplateRef;

  // User setup code




  const props = defineProps<ParentWidgetProps>();

  // @vize-map: 1230:1295 -> 0:184

  // ========== Template Scope (inherits from setup) ==========
  ;(function __template() {
    // Vue template context (delegates to ComponentPublicInstance)
    type __Ctx = import('vue').ComponentPublicInstance;
    const __ctx = undefined as unknown as __Ctx;
    const $attrs = __ctx.$attrs;
    const $slots = __ctx.$slots;
    const $refs = __ctx.$refs;
    const $emit = __ctx.$emit;
    void __ctx; void $attrs; void $slots; void $refs; void $emit;

  // Props are available in template as variables
  // Access via `propName` or `props.propName`
  const props: Props = {} as Props;
  void props; // Mark as used to avoid TS6133
  const _as = props["as"];
  void _as;
  const asChild = props["asChild"];
  void asChild;

  void (props["as"]); // VBind
  // @vize-map: expr -> 270:272
  void (props.asChild); // VBind
  // @vize-map: expr -> 285:298

  // Component props type declarations
  type __VizeIsAny<T> = 0 extends (1 & T) ? true : false;
  type __VizePropChecker<C> = __VizeIsAny<C> extends true ? (props: any) => void : C extends { __vizeCheck: infer __F } ? (__F extends (...args: any[]) => any ? __F : (props: any) => void) : (props: any) => void;
  type __VizePropValue<P, K extends PropertyKey> = K extends keyof P ? P[K] : unknown;
  // @vize-map: component -> 258:302
  type __Child_Props_0 = typeof Child extends { new (): { $props: infer __P } } ? __P : (typeof Child extends (props: infer __P) => any ? __P : {});
  type __Child_0_prop_as = __VizePropValue<__Child_Props_0, 'as'>;
  type __Child_0_prop_as_child = __VizePropValue<__Child_Props_0, 'asChild'>;
  type __Child_Check_0 = __VizePropChecker<typeof Child>;

  // Component props value checks (template scope)
  // @vize-map: prop -> 265:273
  const __vize_prop_check_0_as: __Child_0_prop_as = props["as"];
  void __vize_prop_check_0_as;
  // @vize-map: prop -> 274:299
  const __vize_prop_check_0_as_child: __Child_0_prop_as_child = props.asChild;
  void __vize_prop_check_0_as_child;
  (undefined as unknown as __Child_Check_0)({
    "as": props["as"],
    "asChild": props.asChild,
  });

  // Mark used components as referenced
  void Child;

  // Reference setup bindings (used in template/CSS v-bind)
  void Child; void as; void asChild; void props;
  })();
}

// Invoke setup to verify types
__setup();

export type Emits = {};
export type Slots = {};

// ========== Default Export ==========
type __VizeComponentInstance = {
  $props: Props;
  $emit: __EmitFn<Emits>;
  $slots: Slots;
};
type __VizeComponentConstructor = new (...args: any[]) => __VizeComponentInstance;
type __VizeVueComponentOptions = {
  name?: string;
  __name?: string;
  __file?: string;
  __vccOpts?: any;
  props?: any;
  emits?: any;
  slots?: any;
  setup?: any;
  render?: Function;
  components?: any;
  directives?: any;
  inheritAttrs?: boolean;
  compatConfig?: any;
  call?: (this: unknown, ...args: unknown[]) => never;
  __isFragment?: never;
  __isTeleport?: never;
  __isSuspense?: never;
  __defaults?: any;
  __vapor?: boolean;
  __multiRoot?: boolean;
  __isKeepAlive?: boolean;
  __isBuiltIn?: boolean;
};
declare const __vize_component__: __VizeComponentConstructor & __VizeVueComponentOptions;
export default __vize_component__;
